--- a/client/src/components/navigation/sidebar.css
+++ b/client/src/components/navigation/sidebar.css
@@ -1,7 +1,11 @@
 /* sidebar.css */
 .sidebar {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	width: 200px;
 	height: 100vh;
+	overflow-y: auto;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -14,6 +18,9 @@
 ul {
 	list-style-type: none;
 	padding: 0;
+	margin: 0;
+	flex: 1;
+	overflow-y: auto;
 }
 
 li {
@@ -32,4 +39,8 @@ li:hover {
 li.active {
 	background-color: #007bff;
 	color: #fff;
+}
+
+.button {
+	height: 10%;
 }
